# moonlight-common-c

./: .gitmodules  CMakeLists.txt
include/: StreamConfiguration.h
